src/main/java/io/rtdi/jdbcabap/parser/antlr/SqlAbapParser.java
// Generated from SqlAbap.g4 by ANTLR 4.12.0
package io.rtdi.jdbcabap.parser.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SqlAbapParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SCOL=1, DOT=2, OPEN_PAR=3, CLOSE_PAR=4, COMMA=5, STAR=6, PLUS=7, MINUS=8, 
		PIPE2=9, DIV=10, MOD=11, LT=12, LT_EQ=13, GT=14, GT_EQ=15, EQ=16, NOT_EQ=17, 
		AND_=18, AS_=19, ASC_=20, BETWEEN_=21, BY_=22, CASE_=23, COLUMN_=24, COMMIT_=25, 
		CREATE_=26, CURRENT_DATE_=27, CURRENT_TIME_=28, CURRENT_TIMESTAMP_=29, 
		DESC_=30, DISTINCT_=31, ELSE_=32, END_=33, FOR_=34, FROM_=35, FULL_=36, 
		GROUP_=37, HAVING_=38, IF_=39, IN_=40, INNER_=41, IS_=42, ISNULL_=43, 
		JOIN_=44, KEY_=45, LEFT_=46, LIKE_=47, LIMIT_=48, NOT_=49, NULL_=50, OFFSET_=51, 
		ON_=52, OR_=53, ORDER_=54, OUTER_=55, RIGHT_=56, ROLLBACK_=57, SELECT_=58, 
		THEN_=59, WHEN_=60, WHERE_=61, IDENTIFIER=62, NUMERIC_LITERAL=63, STRING_LITERAL=64, 
		BLOB_LITERAL=65, SINGLE_LINE_COMMENT=66, MULTILINE_COMMENT=67, SPACES=68, 
		UNEXPECTED_CHAR=69;
	public static final int
		RULE_sql_stmt = 0, RULE_commitstmt = 1, RULE_rollbackstmt = 2, RULE_signednumber = 3, 
		RULE_expr = 4, RULE_exprconstantstring = 5, RULE_exprconstantnum = 6, 
		RULE_exprnull = 7, RULE_whereclause = 8, RULE_whereandorop = 9, RULE_whereop = 10, 
		RULE_wherecondition = 11, RULE_whereconditioncomp = 12, RULE_whereconditionbrackets = 13, 
		RULE_whereexprl = 14, RULE_whereexprr = 15, RULE_wheretablenamel = 16, 
		RULE_wherecolumnnamel = 17, RULE_wheretablenamer = 18, RULE_wherecolumnnamer = 19, 
		RULE_exprlimit = 20, RULE_exproffset = 21, RULE_literalvalue = 22, RULE_wherevaluel = 23, 
		RULE_wherevaluer = 24, RULE_selectstmt = 25, RULE_joinclause = 26, RULE_tableclause = 27, 
		RULE_selectcore = 28, RULE_simpleselectstmt = 29, RULE_starcolumn = 30, 
		RULE_resultcolumn = 31, RULE_joinoperator = 32, RULE_joinconstraint = 33, 
		RULE_qualifiedtablename = 34, RULE_orderbystmt = 35, RULE_limitstmt = 36, 
		RULE_orderingterm = 37, RULE_ascdesc = 38, RULE_initialselect = 39, RULE_unaryoperator = 40, 
		RULE_columnalias = 41, RULE_keyword = 42, RULE_name = 43, RULE_tablename = 44, 
		RULE_columnname = 45, RULE_tablealias = 46, RULE_alias = 47, RULE_any_name = 48;
	private static String[] makeRuleNames() {
		return new String[] {
			"sql_stmt", "commitstmt", "rollbackstmt", "signednumber", "expr", "exprconstantstring", 
			"exprconstantnum", "exprnull", "whereclause", "whereandorop", "whereop", 
			"wherecondition", "whereconditioncomp", "whereconditionbrackets", "whereexprl", 
			"whereexprr", "wheretablenamel", "wherecolumnnamel", "wheretablenamer", 
			"wherecolumnnamer", "exprlimit", "exproffset", "literalvalue", "wherevaluel", 
			"wherevaluer", "selectstmt", "joinclause", "tableclause", "selectcore", 
			"simpleselectstmt", "starcolumn", "resultcolumn", "joinoperator", "joinconstraint", 
			"qualifiedtablename", "orderbystmt", "limitstmt", "orderingterm", "ascdesc", 
			"initialselect", "unaryoperator", "columnalias", "keyword", "name", "tablename", 
			"columnname", "tablealias", "alias", "any_name"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'.'", "'('", "')'", "','", "'*'", "'+'", "'-'", "'||'", 
			"'/'", "'%'", "'<'", "'<='", "'>'", "'>='", "'='", "'<>'", "'AND'", "'AS'", 
			"'ASC'", "'BETWEEN'", "'BY'", "'CASE'", "'COLUMN'", "'COMMIT'", "'CREATE'", 
			"'CURRENT_DATE'", "'CURRENT_TIME'", "'CURRENT_TIMESTAMP'", "'DESC'", 
			"'DISTINCT'", "'ELSE'", "'END'", "'FOR'", "'FROM'", "'FULL'", "'GROUP'", 
			"'HAVING'", "'IF'", "'IN'", "'INNER'", "'IS'", "'ISNULL'", "'JOIN'", 
			"'KEY'", "'LEFT'", "'LIKE'", "'LIMIT'", "'NOT'", "'NULL'", "'OFFSET'", 
			"'ON'", "'OR'", "'ORDER'", "'OUTER'", "'RIGHT'", "'ROLLBACK'", "'SELECT'", 
			"'THEN'", "'WHEN'", "'WHERE'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SCOL", "DOT", "OPEN_PAR", "CLOSE_PAR", "COMMA", "STAR", "PLUS", 
			"MINUS", "PIPE2", "DIV", "MOD", "LT", "LT_EQ", "GT", "GT_EQ", "EQ", "NOT_EQ", 
			"AND_", "AS_", "ASC_", "BETWEEN_", "BY_", "CASE_", "COLUMN_", "COMMIT_", 
			"CREATE_", "CURRENT_DATE_", "CURRENT_TIME_", "CURRENT_TIMESTAMP_", "DESC_", 
			"DISTINCT_", "ELSE_", "END_", "FOR_", "FROM_", "FULL_", "GROUP_", "HAVING_", 
			"IF_", "IN_", "INNER_", "IS_", "ISNULL_", "JOIN_", "KEY_", "LEFT_", "LIKE_", 
			"LIMIT_", "NOT_", "NULL_", "OFFSET_", "ON_", "OR_", "ORDER_", "OUTER_", 
			"RIGHT_", "ROLLBACK_", "SELECT_", "THEN_", "WHEN_", "WHERE_", "IDENTIFIER", 
			"NUMERIC_LITERAL", "STRING_LITERAL", "BLOB_LITERAL", "SINGLE_LINE_COMMENT", 
			"MULTILINE_COMMENT", "SPACES", "UNEXPECTED_CHAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SqlAbap.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SqlAbapParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Sql_stmtContext extends ParserRuleContext {
		public CommitstmtContext commitstmt() {
			return getRuleContext(CommitstmtContext.class,0);
		}
		public RollbackstmtContext rollbackstmt() {
			return getRuleContext(RollbackstmtContext.class,0);
		}
		public SelectstmtContext selectstmt() {
			return getRuleContext(SelectstmtContext.class,0);
		}
		public Sql_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sql_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlAbapListener ) ((SqlAbapListener)listener).enterSql_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlAbapListener ) ((SqlAbapListener)listener).exitSql_stmt(this);
		}
	}

	public final Sql_stmtContext sql_stmt() throws RecognitionException {
		Sql_stmtContext _localctx = new Sql_stmtContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_sql_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EOF:
				{
				}
				break;
			case COMMIT_:
				{
				setState(99);
				commitstmt();
				}
				break;
			case ROLLBACK_:
				{
				setState(100);
				rollbackstmt();
				}
				break;
			case SELECT_:
				{
				setState(101);
				selectstmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CommitstmtContext extends ParserRuleContext {
		public TerminalNode COMMIT_() { return getToken(SqlAbapParser.COMMIT_, 0); }
		public CommitstmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commitstmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlAbapListener ) ((SqlAbapListener)listener).enterCommitstmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlAbapListener ) ((SqlAbapListener)listener).exitCommitstmt(this);
		}
	}

	public final CommitstmtContext commitstmt() throws RecognitionException {
		CommitstmtContext _localctx = new CommitstmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_commitstmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(COMMIT_);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RollbackstmtContext extends ParserRuleContext {
		public TerminalNode ROLLBACK_() { return getToken(SqlAbapParser.ROLLBACK_, 0); }
		public RollbackstmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rollbackstmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlAbapListener ) ((SqlAbapListener)listener).enterRollbackstmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlAbapListener ) ((SqlAbapListener)listener).exitRollbackstmt(this);
		}
	}

	public final RollbackstmtContext rollbackstmt() throws RecognitionException {
		RollbackstmtContext _localctx = new RollbackstmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_rollbackstmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(ROLLBACK_);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SignednumberContext extends ParserRuleContext {
		public TerminalNode NUMERIC_LITERAL() { return getToken(SqlAbapParser.NUMERIC_LITERAL, 0); }
		public TerminalNode PLUS() { return getToken(SqlAbapParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(SqlAbapParser.MINUS, 0); }
		public SignednumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_signednumber; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlAbapListener ) ((SqlAbapListener)listener).enterSignednumber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlAbapListener ) ((SqlAbapListener)listener).exitSignednumber(this);
		}
	}

	public final SignednumberContext signednumber() throws RecognitionException {
		SignednumberContext _localctx = new SignednumberContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_signednumber);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PLUS || _la==MINUS) {
				{
				setState(108);
				_la = _input.LA(1);
				if ( !(_la==PLUS || _la==MINUS) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(111);
			match(NUMERIC_LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprContext extends ParserRuleContext {
		public ExprconstantnumContext exprconstantnum() {
			return getRuleContext(ExprconstantnumContext.class,0);
		}
		public ExprconstantstringContext exprconstantstring() {
			return getRuleContext(ExprconstantstringContext.class,0);
		}
		public ExprnullContext exprnull() {
			return getRuleContext(ExprnullContext.class,0);
		}
		public ColumnnameContext columnname() {
			return getRuleContext(ColumnnameContext.class,0);
		}
		public TablenameContext tablename() {
			return getRuleContext(TablenameContext.class,0);
		}
		public TerminalNode DOT() { return getToken(SqlAbapParser.DOT, 0); }
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlAbapListener ) ((SqlAbapListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlAbapListener ) ((SqlAbapListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_expr);
		try {
			setState(122);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(113);
				exprconstantnum();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(114);
				exprconstantstring();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(115);
				exprnull();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(119);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(116);
					tablename();
					setState(117);
					match(DOT);
					}
					break;
				}
				setState(121);
				columnname();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprconstantstringContext extends ParserRuleContext {
		public TerminalNode STRING_LITERAL() { return getToken(SqlAbapParser.STRING_LITERAL, 0); }
		public ExprconstantstringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprconstantstring; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlAbapListener ) ((SqlAbapListener)listener).enterExprconstantstring(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlAbapListener ) ((SqlAbapListener)listener).exitExprconstantstring(this);
		}
	}

	public final ExprconstantstringContext exprconstantstring() throws RecognitionException {
		ExprconstantstringContext _localctx = new ExprconstantstringContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_exprconstantstring);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(STRING_LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprconstantnumContext extends ParserRuleContext {
		public TerminalNode NUMERIC_LITERAL() { return getToken(SqlAbapParser.NUMERIC_LITERAL, 0); }
		public ExprconstantnumContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprconstantnum; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlAbapListener ) ((SqlAbapListener)listener).enterExprconstantnum(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlAbapListener ) ((SqlAbapListener)listener).exitExprconstantnum(this);
		}
	}

	public final ExprconstantnumContext exprconstantnum() throws RecognitionException {
		ExprconstantnumContext _localctx = new ExprconstantnumContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_exprconstantnum);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(NUMERIC_LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExprnullContext extends ParserRuleContext {
		public TerminalNode NULL_() { return getToken(SqlAbapParser.NULL_, 0); }
		public ExprnullContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprnull; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlAbapListener ) ((SqlAbapListener)listener).enterExprnull(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlAbapListener ) ((SqlAbapListener)listener).exitExprnull(this);
		}
	}

	public final ExprnullContext exprnull() throws RecognitionException {
		ExprnullContext _localctx = new ExprnullContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_exprnull);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(NULL_);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WhereclauseContext extends ParserRuleContext {
		public List<WhereconditionContext> wherecondition() {
			return getRuleContexts(WhereconditionContext.class);
		}
		public WhereconditionContext wherecondition(int i) {
			return getRuleContext(WhereconditionContext.class,i);
		}
		public List<WhereandoropContext> whereandorop() {
			return getRuleContexts(WhereandoropContext.class);
		}
		public WhereandoropContext whereandorop(int i) {
			return getRuleContext(WhereandoropContext.class,i);
		}
		public WhereclauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whereclause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlAbapListener ) ((SqlAbapListener)listener).enterWhereclause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlAbapListener ) ((SqlAbapListener)listener).exitWhereclause(this);
		}
	}

	public final WhereclauseContext whereclause() throws RecognitionException {
		WhereclauseContext _localctx = new WhereclauseContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_whereclause);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			wherecondition();
			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AND_ || _la==OR_) {
				{
				{
				setState(131);
				whereandorop();
				setState(132);
				wherecondition();
				}
				}
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WhereandoropContext extends ParserRuleContext {
		public TerminalNode AND_() { return getToken(SqlAbapParser.AND_, 0); }
		public TerminalNode OR_() { return getToken(SqlAbapParser.OR_, 0); }
		public WhereandoropContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whereandorop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlAbapListener ) ((SqlAbapListener)listener).enterWhereandorop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlAbapListener ) ((SqlAbapListener)listener).exitWhereandorop(this);
		}
	}

	public final WhereandoropContext whereandorop() throws RecognitionException {
		WhereandoropContext _localctx = new WhereandoropContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_whereandorop);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			_la = _input.LA(1);
			if ( !(_la==AND_ || _la==OR_) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WhereopContext extends ParserRuleContext {
		public TerminalNode EQ() { return getToken(SqlAbapParser.EQ, 0); }
		public TerminalNode NOT_EQ() { return getToken(SqlAbapParser.NOT_EQ, 0); }
		public TerminalNode LT() { return getToken(SqlAbapParser.LT, 0); }
		public TerminalNode LT_EQ() { return getToken(SqlAbapParser.LT_EQ, 0); }
		public TerminalNode GT() { return getToken(SqlAbapParser.GT, 0); }
		public TerminalNode GT_EQ() { return getToken(SqlAbapParser.GT_EQ, 0); }
		public TerminalNode LIKE_() { return getToken(SqlAbapParser.LIKE_, 0); }
		public TerminalNode NOT_() { return getToken(SqlAbapParser.NOT_, 0); }
		public WhereopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whereop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlAbapListener ) ((SqlAbapListener)listener).enterWhereop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlAbapListener ) ((SqlAbapListener)listener).exitWhereop(this);
		}
	}

	public final WhereopContext whereop() throws RecognitionException {
		WhereopContext _localctx = new WhereopContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_whereop);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EQ:
				{
				setState(141);
				match(EQ);
				}
				break;
			case NOT_EQ:
				{
				setState(142);
				match(NOT_EQ);
				}
				break;
			case LT:
				{
				setState(143);
				match(LT);
				}
				break;
			case LT_EQ:
				{
				setState(144);
				match(LT_EQ);
				}
				break;
			case GT:
				{
				setState(145);
				match(GT);
				}
				break;
			case GT_EQ:
				{
				setState(146);
				match(GT_EQ);
				}
				break;
			case LIKE_:
			case NOT_:
				{
				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NOT_) {
					{
					setState(147);
					match(NOT_);
					}
				}

				setState(150);
				match(LIKE_);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
